xee-xpath/tests/snapshots/xpath__function_parameters.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"let $apply := function($x as xs:integer, $f as function(xs:integer) as xs:integer) as xs:integer {\n            $f($x)\n         } return $apply(3, function($x) { $x + 1 })\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    4,
                ),
            ),
        ),
    },
)
