xee-xpath/tests/snapshots/xpath__generate_id.snap
---
source: xee-xpath-compiler/tests/xpath.rs
expression: "run_xml(r#\"<doc><a/><b/><c/></doc>\"#, \"generate-id(doc/a)\",)"
---
Ok(
    One(
        One {
            item: Atomic(
                String(
                    String,
                    "id0s2",
                ),
            ),
        },
    ),
)
