xee-xpath/tests/snapshots/xpath__inline_function_call_with_let.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"function($x, $y) { $x + $y }(let $a := 1 return $a, let $b := 2 return $b)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    3,
                ),
            ),
        ),
    },
)
