xee-xpath/tests/snapshots/xpath__inline_function_without_args.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"function() { 5 } ()\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    5,
                ),
            ),
        ),
    },
)
