xee-xpath/tests/snapshots/xpath__instance_of_many.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"(1, 2) instance of xs:integer*\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    true,
                ),
            ),
        ),
    },
)
