xee-xpath/tests/snapshots/xpath__instance_of_node.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run_xml(r#\"<doc><a/></doc>\"#, \"doc/a instance of element(a)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    true,
                ),
            ),
        ),
    },
)
