xee-xpath/tests/snapshots/xpath__instance_of_node_fails.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run_xml(r#\"<doc><a/></doc>\"#, \"doc/a instance of element(b)\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    false,
                ),
            ),
        ),
    },
)
