xee-xpath/tests/snapshots/xpath__instance_of_one_fails.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"() instance of xs:integer\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    false,
                ),
            ),
        ),
    },
)
