xee-xpath/tests/snapshots/xpath__let.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"let $x := 1 return $x + 2\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    3,
                ),
            ),
        ),
    },
)
