xee-xpath/tests/snapshots/xpath__let_uses_own_variable.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"let $x := $x return $x\")"
---
Err(
    XPST0008,
)
